# binaryninja-api

./: .gitignore  .gitmodules  APISources.cmake  CMakeLists.txt  Cargo.toml  README.md  architecture.cpp  basicblock.cpp  binaryninjaapi.cpp  binaryninjaapi.h  binaryninjacore.h  binaryview.cpp  binaryviewtype.cpp  collaboration.cpp  database.cpp  debuginfo.cpp  defaultabb.cpp  defaultarch.cpp  exceptions.cpp  filemetadata.cpp  firmwareninja.cpp  function.cpp  genericrange.h  highlevelil.cpp  highlevelilinstruction.cpp  highlevelilinstruction.h  http.cpp  http.h  log.cpp  lowlevelil.cpp  lowlevelilinstruction.cpp  lowlevelilinstruction.h  mediumlevelil.cpp  mediumlevelilinstruction.cpp  mediumlevelilinstruction.h  mkdocs.yml  platform.cpp  plugin.cpp  possiblevalueset.cpp  rapidjsonwrapper.h  (+10 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cpp.yml
api-docs/cppdocs/: binaryninja-docs.css  build_min_docs.py  conf.py
api-docs/source/: conf.py
arch/arm64/: CMakeLists.txt  README.md  arch_arm64.cpp  arm64test.py  il.cpp  il.h
arch/armv7/: CMakeLists.txt  arch_armv7.cpp  il.cpp
arch/mips/: CMakeLists.txt  arch_mips.cpp
arch/msp430/: CMakeLists.txt  Cargo.toml
arch/powerpc/: CMakeLists.txt  arch_ppc.cpp  assembler.cpp  il.cpp
arch/riscv/: CMakeLists.txt  Cargo.toml  build.rs
arch/x86/: CMakeLists.txt  arch_x86.cpp
cmake/: BinjaPluginFunctions.cmake  FindBinaryNinjaCore.cmake  InstallRules.cmake  install-config.cmake  install-config.cmake.in
cmake/find/: FindBinaryNinjaCore.cmake  FindBinaryNinjaUI.cmake
defaultabb/: CMakeLists.txt
demangler/gnu3/: CMakeLists.txt  demangle_gnu3.cpp
demangler/msvc/: CMakeLists.txt  demangle_msvc.cpp
docs/: tabsync.js
docs/about/: open-source.md  rust-ghidra-import.html
docs/dev/: annotation.md  bnil-hlil.md  bnil-modifying.md  bnil-overview.md  concepts.md  containertransforms.md  cookbook.md  plugins.md  typelibraries.md  workflows.md
docs/guide/: guided_analysis.md  index.md  kernelcache.md  objectivec.md  settings.md  sharedcache.md  troubleshooting.md  warp.md
examples/: CMakeLists.txt
examples/background_task/: CMakeLists.txt
examples/bin-info/: CMakeLists.txt
examples/breakpoint/: CMakeLists.txt
examples/cmdline_disasm/: CMakeLists.txt
examples/enterprise_test/: CMakeLists.txt
examples/llil_parser/: CMakeLists.txt
examples/mlil_parser/: CMakeLists.txt
examples/print_syscalls/: CMakeLists.txt
examples/triage/: CMakeLists.txt  entropy.cpp  entropy.h  entry.cpp  entry.h  exports.cpp  exports.h  fileinfo.cpp  fileinfo.h  headers.cpp  headers.h  imports.cpp  imports.h  strings.cpp  strings.h  view.cpp  view.h
examples/uinotification/: CMakeLists.txt
examples/workflows/inliner/: CMakeLists.txt
examples/workflows/tailcall/: CMakeLists.txt  tailcall.cpp
examples/workflows/unflatten/: CMakeLists.txt  library.cpp
examples/x86_extension/: CMakeLists.txt
formatter/generic/: CMakeLists.txt  genericformatter.cpp
lang/c/: CMakeLists.txt  pseudoc.cpp  pseudoc.h  pseudoobjc.cpp  pseudoobjc.h
lang/rust/: CMakeLists.txt  pseudorust.cpp
objectivec/: objc.cpp  objc.h
platform/decree/: CMakeLists.txt
platform/efi/: CMakeLists.txt
platform/freebsd/: CMakeLists.txt
platform/linux/: CMakeLists.txt  platform_linux.cpp
platform/mac/: CMakeLists.txt
platform/mac-kernel/: CMakeLists.txt  platform_mac_kernel.cpp
platform/windows/: CMakeLists.txt
platform/windows-kernel/: CMakeLists.txt
plugins/idb_import/: CMakeLists.txt  Cargo.toml
plugins/msvc_rtti/: plugin.cpp
plugins/pdb-ng/: CMakeLists.txt  Cargo.toml
plugins/rtti/: CMakeLists.txt  README.md  itanium.cpp  itanium.h  microsoft.cpp  microsoft.h  plugin.cpp  rtti.cpp  rtti.h
plugins/stack_render_layer/: CMakeLists.txt  plugin.cpp
plugins/svd/: CMakeLists.txt  Cargo.toml  build.rs
plugins/warp/: CMakeLists.txt  Cargo.toml  build.rs
plugins/workflow_objc/: CMakeLists.txt  Cargo.toml  Plugin.cpp  Workflow.cpp  Workflow.h
python/: CMakeLists.txt  __init__.py  architecture.py  associateddatastore.py  basedetection.py  basicblock.py  binaryview.py  callingconvention.py  commonil.py  compatibility.py  constantrenderer.py  databuffer.py  datarender.py  debuginfo.py  demangle.py  downloadprovider.py  fileaccessor.py  filemetadata.py  firmwareninja.py  flowgraph.py  function.py  functionrecognizer.py  generator.cpp  highlevelil.py  interaction.py  languagerepresentation.py  lineardisassembly.py  lineformatter.py  log.py  lowlevelil.py  mainthread.py  mediumlevelil.py  platform.py  plugin.py  project.py  renderlayer.py  scriptingprovider.py  secretsprovider.py  settings.py  stringrecognizer.py  (+11 more)
python/examples/: args_render_layer.py  newline_render_layer.py  ui_notifications.py  wf_test_copy_expr.py  wf_unflatten.py
rust/: CMakeLists.txt  Cargo.toml  README.md
rust/binaryninjacore-sys/: build.rs
rust/examples/: bndb_to_type_library.rs  create_type_library.rs  decompile.rs  disassemble.rs  dump_type_library.rs  flowgraph.rs  high_level_il.rs  medium_level_il.rs  simple.rs  type_printer.rs  workflow.rs
rust/src/: architecture.rs  background_task.rs  basic_block.rs  binary_reader.rs  binary_view.rs  calling_convention.rs  collaboration.rs  command.rs  component.rs  custom_binary_view.rs  data_buffer.rs  database.rs  debuginfo.rs  demangle.rs  disassembly.rs  download_provider.rs  enterprise.rs  external_library.rs  ffi.rs  file_accessor.rs  file_metadata.rs  flowgraph.rs  function.rs  function_recognizer.rs  headless.rs  interaction.rs  language_representation.rs  lib.rs  linear_view.rs  llvm.rs  logger.rs  low_level_il.rs  metadata.rs  platform.rs  rc.rs  (+21 more)
scripts/: check_docstring_formatting.py
stubs/: CMakeLists.txt
ui/: commands.h  containerbrowser.h  createstructdialog.h  disassemblyview.h  expandablegroup.h  featuremap.h  flowgraphwidget.h  linearview.h  memorymap.h  pane.h  passwordedit.h  progresstask.h  quicksettings.h  sidebar.h  sidebarcontainer.h  sidebaricons.h  sidebarwidget.h  stringsview.h  tabwidget.h  typebrowser.h  uicontext.h  uitypes.h  variablelist.h  viewframe.h  workflowmonitor.h  xreflist.h
(+256 files in other folders)
