cmake_minimum_required(VERSION 3.14)

project(binaryninjaapi_examples)

add_subdirectory(background_task)
add_subdirectory(bin-info)
add_subdirectory(breakpoint)
add_subdirectory(cmdline_disasm)
add_subdirectory(llil_parser)
add_subdirectory(mlil_parser)
add_subdirectory(print_syscalls)
if(NOT BinaryNinjaAPI_HEADLESS)
	add_subdirectory(uinotification)
endif()
add_subdirectory(workflows/inliner)
add_subdirectory(workflows/tailcall)
#if(BinaryNinjaAPI_ENTERPRISE)
	add_subdirectory(enterprise_test)
#endif()
add_subdirectory(x86_extension)
