cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

project(workflow_unflatten CXX)

file(GLOB SOURCES
	*.cpp
	*.c
	*.h)

add_library(${PROJECT_NAME} SHARED ${SOURCES})

if(NOT TARGET binaryninjaapi)
    find_package(BinaryNinjaAPI REQUIRED)
endif()

target_link_libraries(${PROJECT_NAME} PUBLIC binaryninjaapi)

set_target_properties(${PROJECT_NAME} PROPERTIES
	CXX_STANDARD 20
	CXX_VISIBILITY_PRESET hidden
	CXX_STANDARD_REQUIRED ON
	C_STANDARD 99
	C_STANDARD_REQUIRED ON
	C_VISIBILITY_PRESET hidden
	VISIBILITY_INLINES_HIDDEN ON
	POSITION_INDEPENDENT_CODE ON)

if(BN_INTERNAL_BUILD)
	plugin_rpath(${PROJECT_NAME})
	set_target_properties(${PROJECT_NAME} PROPERTIES
		LIBRARY_OUTPUT_DIRECTORY ${BN_CORE_PLUGIN_DIR}
		RUNTIME_OUTPUT_DIRECTORY ${BN_CORE_PLUGIN_DIR})
endif()
